# py_iec_pas_63343

./: README.md  pyproject.toml
src/iec_pas_63343/: sentences.py
